<resources>
    <string name="app_name">MyDiary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_data_view">DataViewActivity</string>
    <string name="title_activity_add_data">AddDataActivity</string>
    <string name="about">
        \n\n
        This app will help in saving and sharing\n
        ✨*:･ﾟ✧ Your memories! *:･ﾟ✧✨
        \n\n

        How to use it?\n\n

        💙 If you want to add a new note, just click on add icon from the bottom right side on the home screen.\n\n
        💙 You can check your coordinates, take and display a photo by clicking on appropriate button.\n\n

        ✨💙✨\n\n
        After writing Your data, click save button to save.\n
        You can share Your memory - Click the share icon!\n
        You can share Your memory - Click the update button!\n\n

        If You want to delete some memories, you can do it and remove multiple items in one time.
        Just hold on the item and select how many items you want to delete. Then press the delete button to delete.\n\n

        ✨ Have a nice day… ✨ \n\n
        …and don\'t forget to leave a new note!\n\n
        *:･ﾟ✧(=✪ ᆺ ✪=)*:･ﾟ✧
    </string>
    <string name="capture_image">Capture Image</string>
    <string name="display_image">Display Image</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="get_coordinates">GET COORDINATES</string>
    <string name="coordinates">Coordinates</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add_sth">Did you forget to add something? Edit note!</string>
    <string name="instructions">App info</string>
    <string name="delete">Delete</string>
    <string name="items_selected">items selected</string>
    <string name="items_deleted">items Deleted</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="no_subject">You didn\'t add any subject</string>
    <string name="data_added">Data added</string>
    <string name="data_not_added">Data not added</string>
    <string name="data_updated">Data updated</string>
    <string name="update">Update</string>
</resources>
