<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryTextColor">


    <!-- This dialog activity for updating information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:background="@color/primaryTextColor">

        <Button
            style="@style/small_button_style"
            android:id="@+id/shareButtonIdUpdate"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/share"
            android:drawableStart="@drawable/share"/>
        <Button
            style="@style/small_button_style"
            android:id="@+id/cacelButtonIdUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/saveButtonIdUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            style="@style/small_button_style"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_sub"
            android:textAlignment="center"
            android:padding="@dimen/text_size"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:text="@string/add_sth" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/subjectEditTextIdUpdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Subject"
            android:inputType="textPersonName"
            android:maxLength="35"
            style="@style/edit_text_style"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      >

        <EditText
            android:id="@+id/descriptionEditTextIdUpdate"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="509dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </LinearLayout>
</LinearLayout>